--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Picture in picture</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+  </head>
+  <body>
     <!-- Video -->
     <video id="video" controls height="360" width="640" hidden></video>
     <!-- Button -->
     <div class="button-container">
-        <button id="button">Start</button>
+      <button id="button">Start</button>
     </div>
     <!-- Script -->
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
